--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "jedediah",
   "version": "0.1.0",
   "description": "CLI option parser that behaves as one would expect",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "make test"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:michaelficarra/jedediah.git"
+  },
+  "devDependencies": {
+    "coffee-script-redux": "~2.0.0",
+    "mocha": "~1.8.1"
   },
   "author": "michaelficarra",
   "license": "BSD"
